--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -70,7 +70,7 @@ body {
 }
 .navbar__header{
   width: 100px;
-  height:80px;
+  height: auto;
 }
 .navbar_logo-CreaVida {
   width: 100%;
@@ -78,39 +78,32 @@ body {
   object-fit: fill;
 }
 
-
-
-.container-lists__menu-list {
-  font-family: sans-serif;
+.title__navbar{
+  font-size: 30px;
+  color: #295508;
+  font-weight: 600;
+  font-family: 'Lora', serif;
+}
+.title__navbar-2{
+  font-size: 30px;
+  color: #60ad26;
+  font-weight: 600;
+  font-family: 'Lora', serif;
 }
 
-#menu {
-  display: flex;
-  flex-direction: flex !important;
+.menu__ul{
+  width: 200px;
 }
-
-#menu-button {
-  display: none;
-}
-
-.menu-list__link {
-  font-size: 17px !important;
-}
-
-.menu-list__item {
-  list-style: none;
-}
-
-.menu-list__link {
+.menu__li {
   font-size: 16px;
   font-weight: 700;
   text-decoration: none;
-  color: #fff;
-  padding: 10px;
+  color: #000;
   transition: 0.5s ease;
+  font-family: 'Overpass', sans-serif;
 }
 
-.container-lists__menu-list:hover li a {
+.menu__li:hover {
   color: #60ad26;
   box-shadow: 0 0 20px 0px #60ad26;
   border-radius: 20px;
@@ -205,7 +198,6 @@ body {
   height: 600px;
   width: 100%;
   display: flex;
-  margin-top: 70px;
 }
 
 .presentation__inicio {
@@ -228,7 +220,7 @@ body {
 
 .presentation__logo {
   width: 20vw;
-  height: 15vw;
+  height: auto;
   overflow: hidden;
   margin: 0 auto;
 }
@@ -424,11 +416,15 @@ body {
   display: flex;
   width: 80%;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+
+}
+.container__buttons-inicio button{
+  margin-bottom: 10px;
 }
 .container__sobreNosotros {
   display: flex;
-  min-height: 90vh;
   flex-direction: column;
   align-items: center;
   padding: 5%;
@@ -556,7 +552,7 @@ body {
 }
 .container__img-value{
   width: 100%;
-  height: 200px;
+  height: auto;
   margin-bottom: 40px;
 }
 .container__img-value img {
@@ -1471,6 +1467,12 @@ margin-left: -40px;
   background-position: center;
   margin: 30px;
 }
+.event-inicio{
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  margin-top: 10px;
+}
 
 .event-1 {
   background-image: url(../img/event1.jpg);
@@ -1765,48 +1767,14 @@ margin-left: -40px;
   text-align: center;
 }
 
-.participation-box .input-box input,
-.participation-box .input-box textarea {
-  position: relative;
-  width: 100%;
-  padding: 5px 0;
-  font-size: 16px;
-  color: #000;
-  margin-bottom: 20px;
-  border: none;
-  border-bottom: 0.5px solid #60ad26;
-  outline: none;
-  background: transparent;
-  resize: none;
+.container__form-participate{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.participation-box .input-box label {
-  position: relative;
-  left: 0;
-  top: -60px;
-  padding: 10px 0;
-  font-size: 16px;
-  color: #000;
-  pointer-events: none;
-  transition: 0.5s;
-  font-family: 'Mate', serif;
-}
 
-.participation-box .input-box input:focus~label,
-.participation-box .input-box input:valid~label {
-  top: -75px;
-  left: 0;
-  color: #60ad26;
-  font-size: 12px;
-}
 
-.participation-box .input-box textarea:focus~label,
-.participation-box .input-box textarea:valid~label {
-  top: -85px;
-  left: 0;
-  color: #60ad26;
-  font-size: 12px;
-}
 
 .button-submit {
   padding: 10px 20px;
@@ -2070,3 +2038,4 @@ margin-left: -40px;
     transform: rotate(360deg);
   }
 }
+
