--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -41,6 +41,52 @@ body {
 
 /* ESTILOS HEADER */
 
+
+.button-header {
+  font-size: 15px;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 5px;
+  margin: 0 auto;
+  display: block;
+  background-color: #fff;
+  background-color: #252423;
+  margin-right: 20px;
+  color: #60ad26;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.button-header:hover {
+  color: #60ad26;
+
+  
+  border: 1px solid #60ad26;
+}
+
+.button-header::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(48, 65, 48);
+  transition: top 0.3s;
+  z-index: -1;
+}
+
+.button-header span:hover {
+  border-bottom: 1px solid #60ad26;
+}
+
+.button-header:hover::before {
+  top: 0;
+}
+
+
 .layout__navbar {
   display: flex;
   position: fixed;
